[gd_scene load_steps=5 format=2]

[ext_resource path="res://fruits.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Catcher.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 1279, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
fruits_scene = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.12549, 0.243137, 1 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 1, 0 )
curve = SubResource( 1 )

[node name="FruitSpawnLocation" type="PathFollow2D" parent="Path2D"]
position = Vector2( -1, 0 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Catcher" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="catch" from="Catcher" to="." method="_on_Catcher_catch"]
